For #161: the /simple/ page can now also be /full/

--- a/gobotany/simplekey/templates/montshire/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/montshire/simplekey/help_start.html
@@ -149,7 +149,7 @@
         </ul>
     </div>
 
-    <a href="{% url simplekey %}"
+    <a href="{% url level1 'simple' %}"
         class="onward-btn">Onward to the Simple Key</a>
 {% endblock %}
 
