--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -22,7 +22,7 @@
                         <a {% ifnotequal request.path "/" %}href="{% url simplekey-index %}"{% endifnotequal %}>Home</a>
                     </li>
                     <li class="plant-id">
-                        <a href="{% url simplekey %}">Simple Key</a>
+                        <a href="{% url level1 'simple' %}">Simple Key</a>
                     </li>
                     <li class="plantshare"><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
                     <li class="advanced-id">
