--- a/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
+++ b/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
@@ -7,5 +7,5 @@
                             {% endif %}
                         </h6>
                         <a class="back-level"
-                            href="{% url simplekey %}">&laquo; Take me back a level.</a>
+                            href="{% url level1 key %}">&laquo; Take me back a level.</a>
                     </div>
