--- a/gobotany/simplekey/templates/simplekey/footcrumbs.html
+++ b/gobotany/simplekey/templates/simplekey/footcrumbs.html
@@ -6,7 +6,7 @@
 {% if not pilegroup %}
     Start: Choose Collection
 {% else %}
-    <a href="{% url simplekey %}">Start: Choose Collection</a>
+    <a href="{% url level1 'simple' %}">Start: Choose Collection</a>
   </li>
   <li>
 {% if not pile %}
