--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -20,9 +20,10 @@
         alt="Two people inspecting and photographing a plant in the woods">
         
     <ul>
-        <li>Our <a href="{% url simplekey %}">Simple Key</a> is an interactive
+        <li>Our <a href="{% url level1 'simple' %}">Simple Key</a> is an interactive
         key to 1,200 species. Answer some questions and narrow down to the plant
-        you want to identify. <a href="{% url simplekey %}">Get Started!</a>
+        you want to identify.
+        <a href="{% url level1 'simple' %}">Get Started!</a>
         </li>
         <li>Using our <a href="{% url advanced-id-tools %}">Advanced Key</a> 
         tools, you can use traditional dichotomous keys to identify genera 
