--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -36,7 +36,7 @@
                         New England plants! Observe closely, collect a
                         sample or take a photo, answer some questions,
                         and narrow down to the correct identification.</p>
-                        <a href="{% url simplekey %}"
+                        <a href="{% url level1 'simple' %}"
                             id="cta">Get Started</a>
                     </div>
                 </div>
