--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -69,7 +69,7 @@
                                 {{ item_title }}</a>
                         {% endif %}
                         {% if result.model_name == 'groupslistpage' %}
-                            <a href="{% url simplekey %}"><img
+                            <a href="{% url level1 'simple' %}"><img
                                 src="/static/images/icons/icon-groups-list.png"
                                 alt="" title="Simple Key plant groups page">
                                 {{ item_title }}</a>
