--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div id="main">
                 <div id="breadcrumb">
-                    <p>You are here: <span>Simple Key</span></p>
+                    <p>You are here: <span>{{ key|title }} Key</span></p>
                 </div>
 
                 <h2>{{ groups_list_page.main_heading }}</h2>
