--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -21,7 +21,8 @@
         <div class="container">
             <div id="main">
                 <div id="breadcrumb">
-                    <p>You are here: <a href="{% url simplekey %}">Simple Key</a>
+                    <p>You are here:
+                    <a href="{% url level1 key %}">{{ key|title }} Key</a>
                     &gt; <span>{{ pilegroup.friendly_title|lower|capfirst }}</span></p>
                 </div>
                 
