--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -2776,6 +2776,9 @@ img.char-value-larger {
     }
 }
 @media only screen and (min-width: 401px) and (max-width: 600px) {
+    html {
+        -webkit-text-size-adjust: none;
+    }
     body {
         padding-top: 75px;
     }
