Small screens: fix formatting in viewport meta tag. (#151)

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -4,9 +4,8 @@
     <head>
         <title>{% block title %}{% endblock %}{% block title_suffix %}: Go Botany{% endblock %}</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width;
-        initial-scale=1.0; minimum-scale=1.0; maximum-scale=1.0;
-        user-scalable=no">
+        <meta name="viewport" content="width=device-width,
+        initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         {# For IE, activate Google Chrome Frame for version 9 or lower #}
         <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE9">
         <link rel="shortcut icon" href="/static/images/branding/favicon.png">
