Small screens: Fix some problems on Level 3 pages and elsewhere.
Make the intro overlay smaller so the orange button can be seen and pressed.
Omit the plant preview popup for now on small screens because the sizing
of the popup is problematic, so instead go directly to the species page.
Fix some page-width issues I'd accidentally introduced in a prior commit.
(#151)

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -4035,7 +4035,13 @@ img.char-value-larger {
     margin: 4px 0;
   }
 
-  /* line 3028, ../sass/styles.scss */
+  /* line 3026, ../sass/styles.scss */
+  #main {
+    float: none;
+    width: inherit;
+  }
+
+  /* line 3032, ../sass/styles.scss */
   #sidebar, #getting-started #sidebar, #about #sidebar,
   #advanced-map #sidebar, #plant-id #sidebar, #glossary #sidebar,
   #video-help-topics #sidebar, #taxon #sidebar {
@@ -4045,25 +4051,31 @@ img.char-value-larger {
   }
 
   /* Levels 1 and 2 */
-  /* line 3034, ../sass/styles.scss */
+  /* line 3038, ../sass/styles.scss */
   .list-item a.plant-in-group {
     clear: left;
   }
 
-  /* line 3037, ../sass/styles.scss */
-  #plant-id #main, #plant-id-2 #main, .list-item .details {
+  /* line 3041, ../sass/styles.scss */
+  .list-item .details {
     float: none;
     width: inherit;
   }
 
   /* Level 3 */
-  /* line 3042, ../sass/styles.scss */
+  /* line 3046, ../sass/styles.scss */
+  #plant-id-3 #main {
+    float: right;
+    width: 710px;
+  }
+
+  /* line 3050, ../sass/styles.scss */
   #plant-id-3 .content .container {
     padding: 0;
     width: 960px;
   }
 
-  /* line 3046, ../sass/styles.scss */
+  /* line 3054, ../sass/styles.scss */
   #plant-id-3 #sidebar {
     float: left;
     margin: 0;
@@ -4071,19 +4083,13 @@ img.char-value-larger {
     width: 228px;
   }
 
-  /* line 3052, ../sass/styles.scss */
+  /* line 3060, ../sass/styles.scss */
   #plant-id-3 #main h3.species-count-heading {
     white-space: nowrap;
   }
 
-  /* Shadowbox */
-  /* line 3056, ../sass/styles.scss */
-  #plant-id-3 .modal-wrap .inner h3.heading {
-    margin-left: 0;
-  }
-
-  /* line 3059, ../sass/styles.scss */
-  #plant-id-3 .list-item .details {
-    width: auto;
+  /* line 3063, ../sass/styles.scss */
+  #intro-overlay {
+    font-size: 100%;
   }
 }
