--- a/gobotany/simplekey/templates/simplekey/full_key_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/full_key_placeholder.html
@@ -5,7 +5,7 @@
 {% block body_attributes %}id="advanced-id" class="claro app teaching-tools"{% endblock %}
 
 {% block js_require %}
-    require(['util/sidebar'], function() {
+    require(['util/sidebar'], function(sidebar) {
         sidebar.setup();
     });
 {% endblock %}
