--- a/gobotany/simplekey/templates/simplekey/privacy.html
+++ b/gobotany/simplekey/templates/simplekey/privacy.html
@@ -5,7 +5,7 @@
 {% block body_attributes %}id="privacy-policy" class="claro app privacy-policy"{% endblock %}
 
 {% block js_require %}
-    require(['util/sidebar'], function() {
+    require(['util/sidebar'], function(sidebar) {
         sidebar.setup();
     });
 {% endblock %}
