--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -5,7 +5,7 @@
 {% block body_attributes %}id="terms-of-use" class="claro app terms-of-use"{% endblock %}
 
 {% block js_require %}
-    require(['util/sidebar'], function() {
+    require(['util/sidebar'], function(sidebar) {
         sidebar.setup();
     });
 {% endblock %}
